<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/id_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/id" />

        <TextView
            android:id="@+id/count_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/count" />

        <TextView
            android:id="@+id/name_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center_horizontal"
            android:text="@string/name" />



    </LinearLayout>

</android.support.constraint.ConstraintLayout>