<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/counter_id"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:fontFamily="@font/hind_madurai_light"
        android:gravity="center_horizontal"
        android:text="@string/start_count"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="150sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <android.support.v7.widget.FitWindowsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_data"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/minus"
            android:elevation="20dp"
            android:text="@string/minus_button"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/plus"
            android:clickable="true"
            android:elevation="20dp"
            android:text="@string/plus_button"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.v7.widget.FitWindowsLinearLayout>


    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <ImageView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_refresh_black_24dp" />

    <ImageView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save_black_24dp" />

    <ImageView
        android:id="@+id/saved_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_view_headline_black_24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_id">

        <EditText
            android:id="@+id/count_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="26sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:cursorVisible="true"
            android:ellipsize="start"
            android:ems="10"
            android:fontFamily="@font/hind_madurai_light"
            android:gravity="center_horizontal"
            android:hint="@string/counter_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:nextFocusUp="@id/counter_id"
            android:singleLine="true"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counter_id"
            app:layout_constraintVertical_bias="0.0" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>